# edebiyati-backend

./: .gitignore  Cargo.toml
.VSCodeCounter/2023-05-09_15-52-05/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-05-10_23-17-57/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: main.rs
src/routes/: mod.rs  post_routes.rs  user_routes.rs
src/types/: common.rs  mod.rs  permissions.rs  post.rs  tag.rs  user.rs
src/utils/: calculate_reading_time.rs  jwt.rs  mod.rs  s3.rs
