[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
crypto = { version = "0.4.0", features = ["digest"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"

mongodb = "2.4.0"
ring = "0.16.20"
scraper = "0.16.0"
serde = {version="1.0.159", features=["derive"]}
serde_json = "1.0.95"
sha256 = "1.1.2"
