[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
crypto = { version = "0.4.0", features = ["digest"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
html2text = "0.5.1"
html5ever = "0.26.0"
jsonwebtoken = "8.3.0"
mime = "0.3.17"

mongodb = "2.4.0"
percent-encoding = "2.2.0"
reqwest = "0.11.17"
ring = "0.16.20"
rusoto = "0.24.2"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_s3 = "0.48.0"
scraper = "0.16.0"
serde = {version="1.0.159", features=["derive"]}
serde_json = "1.0.95"
sha256 = "1.1.2"
uuid = "1.3.1"
